# nitrokey-sdk-py

./: .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  poetry.toml  pyproject.toml  ruff.txt
.github/workflows/: cd-pypi.yaml  ci.yaml  full.yaml
.pip/: pip.conf
ci-scripts/linux/rpm/: protobuf.patch  python3-nitrokey.spec
docs/: conf.py  index.rst
docs/api/: index.rst  nitrokey.nk3.rst  nitrokey.nk3.secrets_app.rst  nitrokey.nk3.updates.rst  nitrokey.nkpk.rst  nitrokey.trussed.admin_app.rst  nitrokey.trussed.provisioner_app.rst  nitrokey.trussed.rst  nitrokey.trussed.updates.rst  nitrokey.updates.rst
docs/guides/: index.rst  usage.rst
src/nitrokey/: __init__.py  _helpers.py  _smartcard.py  helpers.py  nkpk.py  should_use_ccid.py  updates.py
src/nitrokey/nk3/: __init__.py  _bootloader.py  _device.py  bootloader.py  credential_exchange_format.py  device.py  secrets_app.py  secrets_app_dataclasses.py  updates.py
src/nitrokey/trussed/: __init__.py  _base.py  _device.py  _exceptions.py  _utils.py  admin_app.py  base.py  device.py  provisioner_app.py  updates.py
src/nitrokey/trussed/_bootloader/: __init__.py  lpc55.py  nrf52.py
src/nitrokey/trussed/_bootloader/lpc55_upload/: __init__.py  exceptions.py
src/nitrokey/trussed/_bootloader/lpc55_upload/crypto/: certificate.py  hash.py  hmac.py  keys.py  symmetric.py  types.py
src/nitrokey/trussed/_bootloader/lpc55_upload/mboot/: commands.py  error_codes.py  mcuboot.py  memories.py  properties.py
src/nitrokey/trussed/_bootloader/lpc55_upload/mboot/interfaces/: usb.py
src/nitrokey/trussed/_bootloader/lpc55_upload/mboot/protocol/: base.py  bulk_protocol.py
src/nitrokey/trussed/_bootloader/lpc55_upload/sbfile/: misc.py
src/nitrokey/trussed/_bootloader/lpc55_upload/sbfile/sb2/: commands.py  headers.py  images.py  sections.py
src/nitrokey/trussed/_bootloader/lpc55_upload/utils/: __init__.py  abstract.py  exceptions.py  misc.py  spsdk_enum.py  usbfilter.py
src/nitrokey/trussed/_bootloader/lpc55_upload/utils/crypto/: cert_blocks.py  rkht.py
src/nitrokey/trussed/_bootloader/lpc55_upload/utils/interfaces/: commands.py
src/nitrokey/trussed/_bootloader/lpc55_upload/utils/interfaces/device/: base.py  usb_device.py
src/nitrokey/trussed/_bootloader/lpc55_upload/utils/interfaces/protocol/: protocol_base.py
src/nitrokey/trussed/_bootloader/nrf52_upload/: exceptions.py
src/nitrokey/trussed/_bootloader/nrf52_upload/dfu/: dfu-cc.proto  dfu_cc_pb2.py  dfu_cc_pb2.pyi  dfu_transport.py  dfu_transport_serial.py  init_packet_pb.py  manifest.py
src/nitrokey/trussed/_bootloader/nrf52_upload/lister/: device_lister.py  enumerated_device.py  lister_backend.py
src/nitrokey/trussed/_bootloader/nrf52_upload/lister/unix/: unix_lister.py
src/nitrokey/trussed/_bootloader/nrf52_upload/lister/windows/: constants.py  lister_win32.py  structures.py
src/nitrokey/trussed/_connection/: __init__.py  ccid.py  ctaphid.py
src/nitrokey/trussed/bootloader/: __init__.py  lpc55.py  nrf52.py
stubs/: hid.pyi  tlv8.pyi
stubs/crcmod/: predefined.pyi
stubs/ecdsa/: __init__.pyi  keys.pyi
stubs/serial/: __init__.pyi  serialutil.pyi
stubs/serial/tools/: list_ports.pyi  list_ports_common.pyi
stubs/smartcard/: CardConnection.pyi  Exceptions.pyi  ExclusiveConnectCardConnection.pyi  ExclusiveTransmitCardConnection.pyi  Reader.pyi  System.pyi
tests/: __init__.py  test_firmware.py  test_password_conversion.py
